@@ -15,7 +15,9 @@ import org.elasticsearch.cluster.ClusterName;
 import org.elasticsearch.cluster.ClusterState;
 import org.elasticsearch.cluster.ClusterStateAckListener;
 import org.elasticsearch.cluster.ClusterStateTaskExecutor;
+import org.elasticsearch.cluster.ClusterStateTaskListener;
 import org.elasticsearch.cluster.service.ClusterService;
+import org.elasticsearch.cluster.service.MasterServiceTaskQueue;
 import org.elasticsearch.common.settings.ClusterSettings;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.core.Releasable;
@@ -54,20 +56,23 @@ import org.elasticsearch.xpack.core.ilm.ShrinkAction;
 import org.elasticsearch.xpack.core.ilm.TimeseriesLifecycleType;
 import org.elasticsearch.xpack.core.ilm.UnfollowAction;
 import org.elasticsearch.xpack.core.ilm.WaitForSnapshotAction;
-import org.mockito.stubbing.Answer;
+import org.junit.Assert;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.Consumer;
 
 import static org.hamcrest.Matchers.containsInAnyOrder;
 import static org.hamcrest.Matchers.containsString;
+import static org.hamcrest.Matchers.empty;
+import static org.hamcrest.Matchers.instanceOf;
+import static org.hamcrest.Matchers.is;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.doAnswer;
@@ -83,35 +88,34 @@ public class ReservedLifecycleStateServiceTests extends ESTestCase {
 
     protected NamedXContentRegistry xContentRegistry() {
         List<NamedXContentRegistry.Entry> entries = new ArrayList<>(ClusterModule.getNamedXWriteables());
-        entries.addAll(
-            Arrays.asList(
-                new NamedXContentRegistry.Entry(
-                    LifecycleType.class,
-                    new ParseField(TimeseriesLifecycleType.TYPE),
-                    (p) -> TimeseriesLifecycleType.INSTANCE
-                ),
-                new NamedXContentRegistry.Entry(LifecycleAction.class, new ParseField(AllocateAction.NAME), AllocateAction::parse),
-                new NamedXContentRegistry.Entry(
-                    LifecycleAction.class,
-                    new ParseField(WaitForSnapshotAction.NAME),
-                    WaitForSnapshotAction::parse
-                ),
-                new NamedXContentRegistry.Entry(
-                    LifecycleAction.class,
-                    new ParseField(SearchableSnapshotAction.NAME),
-                    SearchableSnapshotAction::parse
-                ),
-                new NamedXContentRegistry.Entry(LifecycleAction.class, new ParseField(DeleteAction.NAME), DeleteAction::parse),
-                new NamedXContentRegistry.Entry(LifecycleAction.class, new ParseField(ForceMergeAction.NAME), ForceMergeAction::parse),
-                new NamedXContentRegistry.Entry(LifecycleAction.class, new ParseField(ReadOnlyAction.NAME), ReadOnlyAction::parse),
-                new NamedXContentRegistry.Entry(LifecycleAction.class, new ParseField(RolloverAction.NAME), RolloverAction::parse),
-                new NamedXContentRegistry.Entry(LifecycleAction.class, new ParseField(ShrinkAction.NAME), ShrinkAction::parse),
-                new NamedXContentRegistry.Entry(LifecycleAction.class, new ParseField(FreezeAction.NAME), FreezeAction::parse),
-                new NamedXContentRegistry.Entry(LifecycleAction.class, new ParseField(SetPriorityAction.NAME), SetPriorityAction::parse),
-                new NamedXContentRegistry.Entry(LifecycleAction.class, new ParseField(MigrateAction.NAME), MigrateAction::parse),
-                new NamedXContentRegistry.Entry(LifecycleAction.class, new ParseField(UnfollowAction.NAME), UnfollowAction::parse),
-                new NamedXContentRegistry.Entry(LifecycleAction.class, new ParseField(DownsampleAction.NAME), DownsampleAction::parse)
-            )
+        Collections.addAll(
+            entries,
+            new NamedXContentRegistry.Entry(
+                LifecycleType.class,
+                new ParseField(TimeseriesLifecycleType.TYPE),
+                (p) -> TimeseriesLifecycleType.INSTANCE
+            ),
+            new NamedXContentRegistry.Entry(LifecycleAction.class, new ParseField(AllocateAction.NAME), AllocateAction::parse),
+            new NamedXContentRegistry.Entry(
+                LifecycleAction.class,
+                new ParseField(WaitForSnapshotAction.NAME),
+                WaitForSnapshotAction::parse
+            ),
+            new NamedXContentRegistry.Entry(
+                LifecycleAction.class,
+                new ParseField(SearchableSnapshotAction.NAME),
+                SearchableSnapshotAction::parse
+            ),
+            new NamedXContentRegistry.Entry(LifecycleAction.class, new ParseField(DeleteAction.NAME), DeleteAction::parse),
+            new NamedXContentRegistry.Entry(LifecycleAction.class, new ParseField(ForceMergeAction.NAME), ForceMergeAction::parse),
+            new NamedXContentRegistry.Entry(LifecycleAction.class, new ParseField(ReadOnlyAction.NAME), ReadOnlyAction::parse),
+            new NamedXContentRegistry.Entry(LifecycleAction.class, new ParseField(RolloverAction.NAME), RolloverAction::parse),
+            new NamedXContentRegistry.Entry(LifecycleAction.class, new ParseField(ShrinkAction.NAME), ShrinkAction::parse),
+            new NamedXContentRegistry.Entry(LifecycleAction.class, new ParseField(FreezeAction.NAME), FreezeAction::parse),
+            new NamedXContentRegistry.Entry(LifecycleAction.class, new ParseField(SetPriorityAction.NAME), SetPriorityAction::parse),
+            new NamedXContentRegistry.Entry(LifecycleAction.class, new ParseField(MigrateAction.NAME), MigrateAction::parse),
+            new NamedXContentRegistry.Entry(LifecycleAction.class, new ParseField(UnfollowAction.NAME), UnfollowAction::parse),
+            new NamedXContentRegistry.Entry(LifecycleAction.class, new ParseField(DownsampleAction.NAME), DownsampleAction::parse)
         );
         return new NamedXContentRegistry(entries);
     }
@@ -129,7 +133,7 @@ public class ReservedLifecycleStateServiceTests extends ESTestCase {
 
         ClusterState state = ClusterState.builder(clusterName).build();
         ReservedLifecycleAction action = new ReservedLifecycleAction(xContentRegistry(), client, mock(XPackLicenseState.class));
-        TransformState prevState = new TransformState(state, Collections.emptySet());
+        TransformState prevState = new TransformState(state, Set.of());
 
         String badPolicyJSON = """
             {
@@ -144,9 +148,9 @@ public class ReservedLifecycleStateServiceTests extends ESTestCase {
               }
             }""";
 
-        assertEquals(
-            "[1:2] [lifecycle_policy] unknown field [phase] did you mean [phases]?",
-            expectThrows(XContentParseException.class, () -> processJSON(action, prevState, badPolicyJSON)).getMessage()
+        assertThat(
+            expectThrows(XContentParseException.class, () -> processJSON(action, prevState, badPolicyJSON)).getMessage(),
+            is("[1:2] [lifecycle_policy] unknown field [phase] did you mean [phases]?")
         );
     }
 
@@ -161,10 +165,10 @@ public class ReservedLifecycleStateServiceTests extends ESTestCase {
 
         String emptyJSON = "";
 
-        TransformState prevState = new TransformState(state, Collections.emptySet());
+        TransformState prevState = new TransformState(state, Set.of());
 
         TransformState updatedState = processJSON(action, prevState, emptyJSON);
-        assertEquals(0, updatedState.keys().size());
+        assertThat(updatedState.keys(), empty());
         assertEquals(prevState.state(), updatedState.state());
 
         String twoPoliciesJSON = """
@@ -241,61 +245,64 @@ public class ReservedLifecycleStateServiceTests extends ESTestCase {
         assertThat(ilmMetadata.getPolicyMetadatas().keySet(), containsInAnyOrder("my_timeseries_lifecycle2"));
     }
 
-    private void setupTaskMock(ClusterService clusterService, ClusterState state) {
-        doAnswer((Answer<Object>) invocation -> {
-            Object[] args = invocation.getArguments();
+    private void setupTaskMock(ClusterService clusterService) {
+        ClusterState state = ClusterState.builder(ClusterName.DEFAULT).build();
+        when(clusterService.state()).thenReturn(state);
+        when(clusterService.createTaskQueue(anyString(), any(), any())).thenAnswer(getQueueInvocation -> {
+            Object[] getQueueArgs = getQueueInvocation.getArguments();
+            @SuppressWarnings("unchecked")
+            final MasterServiceTaskQueue<ClusterStateTaskListener> taskQueue = mock(MasterServiceTaskQueue.class);
 
-            if ((args[3] instanceof ReservedStateUpdateTaskExecutor) == false) {
-                fail("Should have gotten a state update task to execute, instead got: " + args[3].getClass().getName());
-            }
+            if ((getQueueArgs[2] instanceof ReservedStateUpdateTaskExecutor executor)) {
+                doAnswer(submitTaskInvocation -> {
+                    Object[] submitTaskArgs = submitTaskInvocation.getArguments();
+                    ClusterStateTaskExecutor.TaskContext<ReservedStateUpdateTask> context = new ClusterStateTaskExecutor.TaskContext<>() {
+                        @Override
+                        public ReservedStateUpdateTask getTask() {
+                            return (ReservedStateUpdateTask) submitTaskArgs[1];
+                        }
 
-            ReservedStateUpdateTaskExecutor task = (ReservedStateUpdateTaskExecutor) args[3];
+                        @Override
+                        public void success(Runnable onPublicationSuccess) {}
 
-            ClusterStateTaskExecutor.TaskContext<ReservedStateUpdateTask> context = new ClusterStateTaskExecutor.TaskContext<>() {
-                @Override
-                public ReservedStateUpdateTask getTask() {
-                    return (ReservedStateUpdateTask) args[1];
-                }
+                        @Override
+                        public void success(Consumer<ClusterState> publishedStateConsumer) {}
 
-                @Override
-                public void success(Runnable onPublicationSuccess) {}
+                        @Override
+                        public void success(Runnable onPublicationSuccess, ClusterStateAckListener clusterStateAckListener) {}
 
-                @Override
-                public void success(Consumer<ClusterState> publishedStateConsumer) {}
+                        @Override
+                        public void success(
+                            Consumer<ClusterState> publishedStateConsumer,
+                            ClusterStateAckListener clusterStateAckListener
+                        ) {}
 
-                @Override
-                public void success(Runnable onPublicationSuccess, ClusterStateAckListener clusterStateAckListener) {}
+                        @Override
+                        public void onFailure(Exception failure) {
+                            fail("Shouldn't fail here");
+                        }
 
-                @Override
-                public void success(Consumer<ClusterState> publishedStateConsumer, ClusterStateAckListener clusterStateAckListener) {}
-
-                @Override
-                public void onFailure(Exception failure) {
-                    fail("Shouldn't fail here");
-                }
-
-                @Override
-                public Releasable captureResponseHeaders() {
+                        @Override
+                        public Releasable captureResponseHeaders() {
+                            return null;
+                        }
+                    };
+                    executor.execute(new ClusterStateTaskExecutor.BatchExecutionContext<>(state, List.of(context), () -> null));
                     return null;
-                }
-            };
-
-            task.execute(new ClusterStateTaskExecutor.BatchExecutionContext<>(state, List.of(context), () -> null));
-
-            return null;
-        }).when(clusterService).submitStateUpdateTask(anyString(), any(), any(), any());
+                }).when(taskQueue).submitTask(anyString(), any(), any());
+            }
+            return taskQueue;
+        });
     }
 
     public void testOperatorControllerFromJSONContent() throws IOException {
         ClusterSettings clusterSettings = new ClusterSettings(Settings.EMPTY, ClusterSettings.BUILT_IN_CLUSTER_SETTINGS);
         ClusterService clusterService = mock(ClusterService.class);
-        final ClusterName clusterName = new ClusterName("elasticsearch");
-
-        ClusterState state = ClusterState.builder(clusterName).build();
-        when(clusterService.state()).thenReturn(state);
+        setupTaskMock(clusterService);
 
         ReservedClusterStateService controller = new ReservedClusterStateService(
             clusterService,
+            null,
             List.of(new ReservedClusterSettingsAction(clusterSettings))
         );
 
@@ -355,9 +362,9 @@ public class ReservedLifecycleStateServiceTests extends ESTestCase {
         AtomicReference<Exception> x = new AtomicReference<>();
 
         try (XContentParser parser = XContentType.JSON.xContent().createParser(XContentParserConfiguration.EMPTY, testJSON)) {
-            controller.process("operator", parser, (e) -> x.set(e));
+            controller.process("operator", parser, x::set);
 
-            assertTrue(x.get() instanceof IllegalStateException);
+            assertThat(x.get(), instanceOf(IllegalStateException.class));
             assertThat(x.get().getMessage(), containsString("Error processing state change request for operator"));
         }
 
@@ -368,33 +375,26 @@ public class ReservedLifecycleStateServiceTests extends ESTestCase {
 
         controller = new ReservedClusterStateService(
             clusterService,
+            null,
             List.of(
                 new ReservedClusterSettingsAction(clusterSettings),
                 new ReservedLifecycleAction(xContentRegistry(), client, licenseState)
             )
         );
 
-        setupTaskMock(clusterService, state);
-
         try (XContentParser parser = XContentType.JSON.xContent().createParser(XContentParserConfiguration.EMPTY, testJSON)) {
-            controller.process("operator", parser, (e) -> {
-                if (e != null) {
-                    fail("Should not fail");
-                }
-            });
+            controller.process("operator", parser, Assert::assertNull);
         }
     }
 
     public void testOperatorControllerWithPluginPackage() {
         ClusterSettings clusterSettings = new ClusterSettings(Settings.EMPTY, ClusterSettings.BUILT_IN_CLUSTER_SETTINGS);
         ClusterService clusterService = mock(ClusterService.class);
-        final ClusterName clusterName = new ClusterName("elasticsearch");
-
-        ClusterState state = ClusterState.builder(clusterName).build();
-        when(clusterService.state()).thenReturn(state);
+        setupTaskMock(clusterService);
 
         ReservedClusterStateService controller = new ReservedClusterStateService(
             clusterService,
+            null,
             List.of(new ReservedClusterSettingsAction(clusterSettings))
         );
 
@@ -410,9 +410,9 @@ public class ReservedLifecycleStateServiceTests extends ESTestCase {
                         "my_timeseries_lifecycle",
                         Map.of(
                             "warm",
-                            new Phase("warm", new TimeValue(10, TimeUnit.SECONDS), Collections.emptyMap()),
+                            new Phase("warm", new TimeValue(10, TimeUnit.SECONDS), Map.of()),
                             "delete",
-                            new Phase("delete", new TimeValue(30, TimeUnit.SECONDS), Collections.emptyMap())
+                            new Phase("delete", new TimeValue(30, TimeUnit.SECONDS), Map.of())
                         )
                     )
                 )
@@ -420,9 +420,9 @@ public class ReservedLifecycleStateServiceTests extends ESTestCase {
             new ReservedStateVersion(123L, Version.CURRENT)
         );
 
-        controller.process("operator", pack, (e) -> x.set(e));
+        controller.process("operator", pack, x::set);
 
-        assertTrue(x.get() instanceof IllegalStateException);
+        assertThat(x.get(), instanceOf(IllegalStateException.class));
         assertThat(x.get().getMessage(), containsString("Error processing state change request for operator"));
 
         Client client = mock(Client.class);
@@ -432,18 +432,13 @@ public class ReservedLifecycleStateServiceTests extends ESTestCase {
 
         controller = new ReservedClusterStateService(
             clusterService,
+            null,
             List.of(
                 new ReservedClusterSettingsAction(clusterSettings),
                 new ReservedLifecycleAction(xContentRegistry(), client, licenseState)
             )
         );
 
-        setupTaskMock(clusterService, state);
-
-        controller.process("operator", pack, (e) -> {
-            if (e != null) {
-                fail("Should not fail");
-            }
-        });
+        controller.process("operator", pack, Assert::assertNull);
     }
 }
